--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,11 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-go@v2
       with:
-        go-version: '1.15.6'
+        go-version: '1.18'
 
     - name: Install dependencies
       run: |
         go version
-        go get -u golang.org/x/lint/golint
 
     - name: Build
       run: go build .
@@ -31,6 +30,6 @@ jobs:
     - name: Run Vet & Lint
       run: |
         go vet ./...
-        golint -set_exit_status=1 ./...
+        go run github.com/golangci/golangci-lint/cmd/golangci-lint@v1.50.0 run -v --timeout=600s
 
 
